--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,12 +1,12 @@
 services:
     escape_wsse_authentication.provider:
-        class:  %escape_wsse_authentication.provider.class%
-        arguments: [null, %kernel.cache_dir%/security/nonces, 300]
+        class:  "%escape_wsse_authentication.provider.class%"
+        arguments: [null, "%kernel.cache_dir%/security/nonces", 300]
 
     escape_wsse_authentication.listener:
-        class:  %escape_wsse_authentication.listener.class%
+        class:  "%escape_wsse_authentication.listener.class%"
         arguments: [@security.context, @security.authentication.manager]
 
     escape_wsse_authentication.entry_point:
-        class:  %escape_wsse_authentication.entry_point.class%
+        class:  "%escape_wsse_authentication.entry_point.class%"
         arguments: [@logger, null, "UsernameToken"]
