Fix invalid yaml format

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,8 +5,8 @@ services:
 
     escape_wsse_authentication.listener:
         class:  "%escape_wsse_authentication.listener.class%"
-        arguments: [@security.context, @security.authentication.manager]
+        arguments: ["@security.context", "@security.authentication.manager"]
 
     escape_wsse_authentication.entry_point:
         class:  "%escape_wsse_authentication.entry_point.class%"
-        arguments: [@logger, null, "UsernameToken"]
+        arguments: ["@logger", null, "UsernameToken"]
